--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+listas/*
+images/*
 
 # TypeScript v1 declaration files
 typings/
